Fix phone images overflowing on y-axis

--- a/new/styles.css
+++ b/new/styles.css
@@ -816,8 +816,6 @@ p > a{
 .phone {
   width: 12.5rem;
   position: relative;
-  left: 0.5rem;
-  top: 0.5rem;
 }
 
 /* Desktop Styles */
@@ -860,7 +858,7 @@ p > a{
     width: 18rem;
   }
 
-  }
+}
 
 /* ---------- Page Bottom ---------- */
 
